# KEA_Soft_System_Integration

./: .gitignore  README.md
01.2_Introduction/01._embedded_youtube/: index.html
01._Assignments/: Mandatory_I_Emil_Lind_Aalund.txt  mandatory_II_Emil_Lind_Aalund.txt
01._Assignments/03._Server-To_Server/03a._Data_parsing_server_part_III/01._Python/: main.py  pyproject.toml
01._Assignments/10a._Document_a_database/: description.txt
01._Assignments/10b._Migrate_From_One_Database_To_Another/: 01._DB_migration_documentation.md
02._Text_Based_Data_Formats/: me.csv  me.json  me.txt  me.xml  me.yaml
03._Modules/html_classic/: index.html  index.js  myModule.js
03._Modules/html_esmodules/: index.html  myModule.js
03._Modules/node_commonjs/: index.js  myModule.js
03._Modules/python_main/: library_importer.py
03._Modules/python_modules/: main.py
04._Encode_Decode/01._node/: index.js
04._Encode_Decode/02._python/: encoding_exercise.py
05._python_virtual_environments/01._venv/: main.py
05._python_virtual_environments/03._poetry/: main.py  pyproject.toml
06_Simple_Servers/01._node/: app.js  package.json
06_Simple_Servers/02._python/: main.py  pyproject.toml
06_Simple_Servers/03._test/: app.js  package.json
06_Simple_Servers/04.test2/: app.js  package-lock.json  package.json
08._Server-Server/01._node/: app.js  package.json
08._Server-Server/02._python/: main.py  pyproject.toml
09._Environment_variables/01._node/: index.js  package.json
09._Environment_variables/02._python/: main.py  pyproject.toml
10._Date/01._Node/: index.js
17._Database_Migrations/02._python_alembic/: alembic.ini  pyproject.toml
18._CORS/: index.html
19._Multipart_Forms/: index.html
20._Base64_Images/: index.html
21._Audio/: index.html
22._MPEG-DASH/: app.js
24._Git_Hooks/: main.js
27._Web_Scraping_Web_Crawling/04._python_scrapy/: pyproject.toml
27._Web_Scraping_Web_Crawling/04._python_scrapy/wikicrawler/: output.json
27._Web_Scraping_Web_Crawling/04._python_scrapy/wikicrawler/wikicrawler/spiders/: WikiPageSpider.py
(+91 files in other folders)
