[project]
name = "03-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "EmailKolar",email = "Emilaalund.nyboder@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "emoji (>=2.14.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "03"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
